--- a/client/src/components/Community/ActiveUser.css
+++ b/client/src/components/Community/ActiveUser.css
@@ -2,14 +2,16 @@
     width: 10%;
     margin-top: 70px;
     color:black;
-    margin-left: 50px;
+    margin:auto;
+    margin-top:70px;
+    height: 400px;
     padding:15px;
     background-color: lightgray;
     border-radius: 5px;
 }
 
 .userList .activeUserTitle{
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 500;
     margin-bottom: 10px;
 }
