--- a/client/src/components/Community/Post.css
+++ b/client/src/components/Community/Post.css
@@ -5,10 +5,14 @@
     display: flex;
     padding:7px;
 }
-
+.post .postCategory{
+    width: 13%;
+}
 .post .postName{
+    display:flex;
     margin-left: 15px;
-    width:20%
+    width:20%;
+    
 }
 .post .postTitle{
     margin-left:15px;
