--- a/client/src/components/Community/ActiveUser.css
+++ b/client/src/components/Community/ActiveUser.css
@@ -13,7 +13,7 @@
 .userList .activeUserTitle{
     font-size: 20px;
     font-weight: 500;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .userList button{
@@ -34,4 +34,9 @@
     padding-bottom: 3px;
     background-color: whitesmoke;
     border-radius: 5px;
+}
+
+.user a{
+    text-decoration: none;
+    color:black;
 }
