--- a/client/src/components/Community/Post.css
+++ b/client/src/components/Community/Post.css
@@ -15,6 +15,10 @@
     
 }
 .post .postTitle{
-    margin-left:15px;
     text-decoration: none;
+}
+
+.post a{
+    text-decoration: none;
+    color:black
 }
