--- a/client/src/components/Community/Post.css
+++ b/client/src/components/Community/Post.css
@@ -1,5 +1,5 @@
 .post{
-    background-color: white;
+    background-color: whitesmoke;
     margin: 20px;
     border-radius: 10px;
     display: flex;
