--- a/client/src/components/Navigation/Navigation.css
+++ b/client/src/components/Navigation/Navigation.css
@@ -2,9 +2,10 @@
     display:flex;
     padding:10px;
     align-items: center;
-    margin-left:3%;
+    margin:auto;
 }
 .navigation a{
+    font-size: 20px;
     color: black;
     text-decoration: none;
     padding:20px;
