--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,8 +1,10 @@
 .chatList{
         display: flex;
         flex-direction: column;
+        width:60%;
         height:600px;
-        margin:30px;
+        margin: 30px auto;
+        padding:30px;
         overflow:auto;
         background-color: lightgray;
         border-radius: 5px;
