Revert "게시글 검색"
This reverts commit 4997b1997253570afb9f42e4191fc485d958c5c5.

--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,10 +1,8 @@
 .chatList{
         display: flex;
         flex-direction: column;
-        width:60%;
         height:600px;
-        margin: 30px auto;
-        padding:30px;
+        margin:30px;
         overflow:auto;
         background-color: lightgray;
         border-radius: 5px;
