--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
 .App {
   height: 100vh;
   text-align: center;
-  background-color: #4aa6ec ;
+  background-color: #a5cff0 ;
   font-family: 'Nanum Gothic Coding', monospace;
   
 }
