--- a/client/src/components/Community/PostForm.css
+++ b/client/src/components/Community/PostForm.css
@@ -1,9 +1,10 @@
+*{
+    box-sizing: border-box;
+}
+
 .postForm{
-    display:flex;
     flex-direction: column;
     justify-content: center;
-    margin-left:27%;
-    margin-right:27%;
 }
 .postForm input{
     height: 30px;
@@ -21,6 +22,8 @@
 }
 .postForm button{
     margin-top:15px;
+    margin-left: 30%;
+    margin-right: 30%;
     height: 30px;
     font-weight: 600;
 }
@@ -30,3 +33,10 @@
     margin-top:5px;
     margin-bottom:10px;
 }
+
+form {
+    margin-left: 15%;
+    margin-right: 15%;
+    padding : 10px;
+    background-color: aliceblue;
+}   
