--- a/client/src/components/Community/PostList.css
+++ b/client/src/components/Community/PostList.css
@@ -1,9 +1,8 @@
 .postPage {
-    margin-top: 70px;
+    margin-top: 20px;
     color:black;
-    width: 80%;
     height: 600px;
-    background-color: lightgray;
+    background-color: rgb(255, 255, 255);
     display:flex;
     flex-direction: column;
     padding:15px;
