--- a/client/src/components/Community/ActiveUser.css
+++ b/client/src/components/Community/ActiveUser.css
@@ -1,10 +1,10 @@
 .userList{
-    width: 25%;
+    width: 15%;
     color:black;
     margin:20px;
     height: 600px;
     padding:20px;
-    background-color: rgb(255, 255, 255);
+    background-color: aliceblue;
     border-radius: 5px;
 }
 
