--- a/client/src/components/Community/Post.css
+++ b/client/src/components/Community/Post.css
@@ -1,9 +1,11 @@
 .post{
-    background-color: whitesmoke;
+    background-color: rgb(255, 255, 255);
     margin: 20px;
     border-radius: 5px; 
+    border : 3px ;
     display: flex;
     padding:7px;
+
 }
 .post .postCategory{
     width: 13%;
