--- a/client/src/components/Community/PostList.css
+++ b/client/src/components/Community/PostList.css
@@ -1,8 +1,9 @@
 .postPage {
+    width: auto;
     margin-top: 20px;
     color:black;
     height: 600px;
-    background-color: rgb(255, 255, 255);
+    background-color: aliceblue;
     display:flex;
     flex-direction: column;
     padding:15px;
@@ -14,12 +15,27 @@
     font-weight: 500;
 }
 
-.postPage .category{
+input {
+    width: 55%;
+    margin : 10px;
     height: 30px;
+    border :  1px    rgb(204, 204, 204);
+}
+
+select{
+    height: 30px;
+    width : 20% ;
     border-radius: 2px;
     width:80px;
-    margin-left:20px;
+
     border-style: none;
+}
+
+button {
+    height: 30px;
+    width : 20% ;
+    text-align-last: auto;
+
 }
 
 .postPage .postList{
