--- a/client/src/components/Community/MyPage.css
+++ b/client/src/components/Community/MyPage.css
@@ -1,28 +1,28 @@
 .myPage{
     margin:auto;
-    margin-top: 30px;
     color:black;
-    width: 500px;
-    height: 600px;
-    background-color: lightgray;
-    display:flex;
+    background-color: aliceblue;
     flex-direction: column;
-    padding:15px;
     border-radius: 5px;
     font-size: 20px;
+    display: flex;
+    align-items: center;
+    top : 0;
+    bottom : 0;
+    left : 0;
+    right : 0 ;
 }
 
 .myPagePage label{
     font-weight: 600;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .myPagePage button{
     width:80px;
 }
 .myPagePage button a{
-    color:black;
-    text-decoration: none;
+    color:blue;
 }
 
 .infoForm{
@@ -31,4 +31,8 @@
     align-items: center;
     width:100%;
     margin: auto;
+}
+
+.mypageLabel{
+    color : rgb(81, 81, 81);
 }
