--- a/client/src/components/Community/PostList.css
+++ b/client/src/components/Community/PostList.css
@@ -1,5 +1,5 @@
 .postPage {
-    width: auto;
+    width : 90%;
     margin-top: 20px;
     color:black;
     height: 600px;
@@ -15,25 +15,25 @@
     font-weight: 500;
 }
 
-input {
-    width: 55%;
+.postPage input {
+    width: 65%;
     margin : 10px;
     height: 30px;
     border :  1px    rgb(204, 204, 204);
 }
 
-select{
+.postPage select{
     height: 30px;
-    width : 20% ;
+    width : 30px ;
     border-radius: 2px;
     width:80px;
 
     border-style: none;
 }
 
-button {
+.postPage button {
     height: 30px;
-    width : 20% ;
+    width : 15% ;
     text-align-last: auto;
 
 }
