--- a/client/src/components/Calendar/Main.css
+++ b/client/src/components/Calendar/Main.css
@@ -3,9 +3,10 @@
 }
 .calendar {
   padding-top: 10px;
-  margin-top:20px;
+  margin-top:5%;
   margin-left:auto;
   margin-right:auto;
+  padding:50px;
   width: 70%;
   height: 70%;
   background-color: white;
