--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,9 +1,18 @@
+.chatPage{
+        width:50%;
+        height:700px;
+        justify-content: center;
+        margin:auto;
+        margin-top: 10%;
+}
+
 .chatList{
+        padding:15px;
         display: flex;
         flex-direction: column;
         height:600px;
         margin:30px;
         overflow:auto;
-        background-color: lightgray;
+        background-color: white;
         border-radius: 5px;
 }
