--- a/client/src/components/Community/Comment.css
+++ b/client/src/components/Community/Comment.css
@@ -4,7 +4,7 @@
     height:200px;
     margin-bottom: 20px;
     overflow:auto;
-    background-color: whitesmoke;
+    background-color: white;
     border-radius: 5px;
 }
 
