--- a/client/src/components/Community/MyPage.css
+++ b/client/src/components/Community/MyPage.css
@@ -1,16 +1,12 @@
 .myPage{
-    margin:auto;
     color:black;
-    background-color: aliceblue;
+    margin-top:10%;
+    background-color: white;
     flex-direction: column;
     border-radius: 5px;
     font-size: 20px;
     display: flex;
     align-items: center;
-    top : 0;
-    bottom : 0;
-    left : 0;
-    right : 0 ;
 }
 
 .myPagePage label{
@@ -20,9 +16,9 @@
 
 .myPagePage button{
     width:80px;
+    color:#98bad3;
 }
 .myPagePage button a{
-    color:blue;
 }
 
 .infoForm{
