--- a/client/src/components/Community/OtherPage.css
+++ b/client/src/components/Community/OtherPage.css
@@ -1,7 +1,8 @@
 .myPage{
     margin:auto;
+    margin-top:10%;
     color:black;
-    background-color: aliceblue;
+    background-color: white;
     flex-direction: column;
     border-radius: 5px;
     display: flex;
@@ -14,6 +15,8 @@
 
 .myPagePage button{
     width:80px;
+    background-color:#98bad3;
+    border-radius: 3px;
 }
 .myPagePage button a{
     color : white;
