--- a/client/src/components/Community/Post.css
+++ b/client/src/components/Community/Post.css
@@ -1,5 +1,5 @@
 .post{
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     margin: 20px;
     border-radius: 5px; 
     border : 3px ;
