--- a/client/src/components/Community/PostDetail.css
+++ b/client/src/components/Community/PostDetail.css
@@ -1,10 +1,10 @@
 .postDetail {
     margin:auto;
-    margin-top: 30px;
+    margin-top: 10%;
     color:black;
     width: 500px;
     height: 650px;
-    background-color: lightgray;
+    background-color: aliceblue;
     display:flex;
     flex-direction: column;
     padding:15px;
