--- a/client/src/components/Community/PostForm.css
+++ b/client/src/components/Community/PostForm.css
@@ -1,14 +1,18 @@
-*{
+.postFormPage{
+    margin-top: 10%;
     box-sizing: border-box;
-    border-radius: 5px;
 }
 
 .postForm{
     justify-content: center;
-    margin-left: 15%;
-    margin-right: 15%;
-    padding : 10px;
-    background-color: aliceblue
+    padding : 20px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width:50%;
+    height:600px;
+    margin:auto;
 }
 .postForm input{
     height: 30px;
