--- a/client/src/components/Navigation/Login.css
+++ b/client/src/components/Navigation/Login.css
@@ -1,4 +1,16 @@
+.loginPage{
+    display:flex;
+    justify-content: center;
+    margin-top: 10%;
+    margin-left:auto;
+    margin-right: auto;
+    width: 40%;
+    height: 700px;
+    background-color: white;;
+}
+
 .loginForm{
+    width: 100%;
     display:flex;
     flex-direction: column;
     justify-content: center;
