--- a/client/src/components/Community/MyPage.css
+++ b/client/src/components/Community/MyPage.css
@@ -1,8 +1,8 @@
 .myPage{
     color:black;
-    margin-top:1%;
     background-color: white;
     flex-direction: column;
+    width: 300px;
     border-radius: 5px;
     font-size: 20px;
     display: flex;
@@ -12,6 +12,7 @@
 .myPagePage label{
     font-weight: 600;
     font-size: 20px;
+    width: 200px;
 }
 
 .myPagePage button{
@@ -19,6 +20,10 @@
     color:#98bad3;
 }
 .myPagePage button a{
+    border-width:3px;
+    background-color: #98bad3;
+    border-style: outset;
+    border-color: rgb(198, 198, 243);
 }
 
 .infoForm{
