--- a/client/src/components/Community/PostForm.css
+++ b/client/src/components/Community/PostForm.css
@@ -1,16 +1,16 @@
 .postFormPage{
-    margin-top: 10%;
+    margin-top: 20px;
     box-sizing: border-box;
 }
 
 .postForm{
     justify-content: center;
-    padding : 20px;
+    padding : 10px;
     background-color: white;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width:50%;
+    width:70%;
     height:600px;
     margin:auto;
 }
@@ -18,12 +18,22 @@
     height: 30px;
     margin-bottom:15px;
     margin-top:5px;
+    width: 500px;
+    border-width:3px;
+    background-color: #98bad3;
+    border-style: inset;
+    border-color: rgb(198, 198, 243);
 }
 
 .postForm select{
     height: 37px;
-    margin-bottom:15px;
+    margin-bottom:10px;
     margin-top:5px;
+    width: 500px;
+    border-width:3px;
+    background-color: #98bad3;
+    border-style: inset;
+    border-color: rgb(198, 198, 243);
 }
 .postForm label{
     font-weight: 600;
@@ -34,10 +44,19 @@
     margin-right: 30%;
     height: 30px;
     font-weight: 600;
+    border-width:3px;
+    background-color: #98bad3;
+    border-style: outset;
+    border-color: rgb(198, 198, 243);
 }
 
 .postForm textarea{
     height: 250px;
+    width: 500px;
     margin-top:5px;
     margin-bottom:10px;
+    border-width:3px;
+    background-color: #98bad3;
+    border-style: inset;
+    border-color: rgb(198, 198, 243);
 }
