--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 80%;
     margin:auto;
-    margin-top: 5%;
+    margin-top: 10px;
     justify-content: center;
     height:100%;
 }
