--- a/client/src/components/Community/MyPageModi.css
+++ b/client/src/components/Community/MyPageModi.css
@@ -3,7 +3,7 @@
     margin-top: 30px;
     color:black;
     width: 500px;
-    height: 600px;
+    height: 70%;
     background-color: lightgray;
     display:flex;
     flex-direction: column;
@@ -47,6 +47,7 @@
     height:30px;
     border-style: none;
     cursor: pointer;
+    color:white;
 }
 
 .infoForm{
