--- a/client/src/components/Navigation/Login.css
+++ b/client/src/components/Navigation/Login.css
@@ -1,12 +1,14 @@
 .loginPage{
     display:flex;
     justify-content: center;
-    margin-top: 10%;
+    align-items: center;
+    margin-top: 5%;
     margin-left:auto;
     margin-right: auto;
     width: 40%;
-    height: 700px;
-    background-color: white;;
+    height: 600px;
+    background-color: white;
+    border-radius: 5px;
 }
 
 .loginForm{
