--- a/client/src/components/Navigation/Register.css
+++ b/client/src/components/Navigation/Register.css
@@ -1,12 +1,13 @@
 .registerPage{
     display:flex;
     justify-content: center;
-    margin-top: 10%;
+    margin-top: 3%;
     margin-left:auto;
     margin-right: auto;
     width: 40%;
     height: 700px;
-    background-color: white;;
+    background-color: white;
+    border-radius: 5px;
 }
 
 .registerForm{
