--- a/client/src/components/Calendar/Main.css
+++ b/client/src/components/Calendar/Main.css
@@ -9,7 +9,7 @@
   padding:50px;
   width: 70%;
   height: 70%;
-  background-color: white;
+  background-color: aliceblue;
 }
 
 .header {
@@ -31,10 +31,11 @@
 
 .nav-btn {
   margin-right: 5px;
-  width: 55px;
+  width: 60px;
   height: 30px;
   color:#ffff;
-  border-style: none;
+  border-style: outset;
+  border-color: #98c1de;
   align-items: center;
   font-size: 16px;
   line-height: 34px;
@@ -94,4 +95,9 @@
   flex-direction: row-reverse;
 }
 .inputButton{
-border-radius: 5px;}
+  border-radius: 5px;
+  border-width:3px;
+  background-color: #98bad3;
+  border-style: outset;
+  border-color: aliceblue;
+}
