--- a/client/src/components/Navigation/Login.css
+++ b/client/src/components/Navigation/Login.css
@@ -1,11 +1,11 @@
 .loginPage{
     display:flex;
     justify-content: center;
-    margin-top: 10%;
+    margin-top:20px;
     margin-left:auto;
     margin-right: auto;
-    width: 40%;
-    height: 700px;
+    width: 50%;
+    height: 400px;
     background-color: white;;
 }
 
@@ -21,6 +21,10 @@
     height: 30px;
     margin-bottom:15px;
     margin-top:5px;
+    border-width:3px;
+    background-color: #98bad3;
+    border-style: inset;
+    border-color: rgb(198, 198, 243);
 }
 .loginForm label{
     font-weight: 600;
@@ -29,4 +33,8 @@
     margin-top:15px;
     height: 30px;
     font-weight: 600;
+    border-width:3px;
+    background-color: #98bad3;
+    border-style: outset;
+    border-color: rgb(198, 198, 243);
 }
