--- a/client/src/components/Navigation/Register.css
+++ b/client/src/components/Navigation/Register.css
@@ -1,12 +1,12 @@
 .registerPage{
     display:flex;
     justify-content: center;
-    margin-top: 10%;
+    margin-top: 10px;
     margin-left:auto;
     margin-right: auto;
-    width: 40%;
-    height: 700px;
-    background-color: white;;
+    width: 70%;
+    height: 600px;
+    background-color: white;
 }
 
 .registerForm{
@@ -18,20 +18,32 @@
 }
 .registerForm input{
     height: 30px;
-    margin-bottom:15px;
+    margin-bottom:5px;
     margin-top:5px;
+    border-width:3px;
+    background-color: #98bad3;
+    border-style: inset;
+    border-color: rgb(198, 198, 243);
 }
 
 .registerForm select{
     height: 37px;
-    margin-bottom:15px;
+    margin-bottom:5px;
     margin-top:5px;
+    border-width:3px;
+    background-color: #98bad3;
+    border-style: inset;
+    border-color: rgb(198, 198, 243);
 }
 .registerForm label{
     font-weight: 600;
 }
 .registerForm button{
-    margin-top:15px;
+    margin-top:25px;
     height: 30px;
     font-weight: 600;
+    border-width:3px;
+    background-color: #98bad3;
+    border-style: outset;
+    border-color: rgb(198, 198, 243);
 }
