--- a/client/src/components/Calendar/InputForm.css
+++ b/client/src/components/Calendar/InputForm.css
@@ -2,7 +2,7 @@
     width: 350px;
     height: 400px;
     border-width:3px;
-    background-color: #3090d0;
+    background-color: #8cbbda;
     border-style: outset;
     border-color: #98bad3;
 }
