--- a/client/src/components/Community/PostDetail.css
+++ b/client/src/components/Community/PostDetail.css
@@ -2,29 +2,43 @@
     margin:auto;
     margin-top: 10%;
     color:black;
-    width: 500px;
-    height: 650px;
-    background-color: aliceblue;
+    width: 70%;
+    height: 450px;
+    background-color: #ffffff;
     display:flex;
     flex-direction: column;
     padding:15px;
     border-radius: 5px;
 }
 
+
 .postDetail .commentTitle{
-    font-size: 20px;
-    margin-bottom: 10px;
-    margin-top:20px;
+    font-size: 15px;
+    margin-bottom: 5px;
+    margin-top:10px;
+    width: 30px;
+    text-align: left;
 }
 
+
 .postDetail .postInfo div{
-    font-size: 20px;
-    margin-top: 10px;
+    font-size: 10px;
+    margin-top: 5px;
+    text-align: left;
+}
+
+.postDetail .postInfo .postContent{
+    font-size: 15px;
+    margin-top: 5px;
+    height: 50px;
+    background-color: #bad0e0;
+    border-style: inset;
+    text-align: left;
+
 }
 
 .postDetail input{
     border-style: none;
-    height: 20px;
     margin-bottom: 10px;
 }
 .postDetail button{
