학교 이메일 인증기능 & 캘린더 일정 모달창 & css 수정

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
 .App {
   height: 100vh;
   text-align: center;
-  background-color: #98bad3 ;
+  background: rgba(34, 114, 146, 0.8);
   font-family: 'Nanum Gothic Coding', monospace;
   
 }
