--- a/client/src/components/Calendar/Main.css
+++ b/client/src/components/Calendar/Main.css
@@ -2,13 +2,11 @@
     box-sizing: border-box;
 }
 .calendar {
-  padding-top: 10px;
-  margin-top:2%;
+  margin-top:1%;
   margin-left:auto;
   margin-right:auto;
-  padding:30px;
+  padding:20px;
   width: 70%;
-  height: 70%;
   background-color: white;
   border-radius: 5px;
 }
@@ -61,7 +59,7 @@
 .dates{
     display:flex;
     flex-wrap: wrap;
-    height:500px;
+    height:470px;
     border:1px solid #000000;
 }
 .date{
@@ -84,9 +82,11 @@
 .inputForm{
   width:350px;
   height:400px;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(34, 114, 146, 0.8);
+  border-radius: 5px;
   color:white;
   position: absolute;
+  left:40%;
   display:flex;
   justify-content: center;
   align-items: center;
@@ -97,4 +97,7 @@
   flex-direction: row-reverse;
 }
 .inputButton{
-border-radius: 5px;}
+border-radius: 3px;
+background-color: #629bc4;
+color:white;
+border: none;}
