--- a/client/src/components/Calendar/Modal.css
+++ b/client/src/components/Calendar/Modal.css
@@ -1,7 +1,7 @@
 .background{
-    width:250px;
-    height:300px;
-    background: rgba(0, 0, 0, 0.8);
+    width:300px;
+    height:330px;
+    background: rgba(34, 114, 146, 0.8);
     color:white;
     position: absolute;
     display:flex;
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     top:35%;
-    left:70%;
+    left:45%;
     border-radius: 5px;
 }
 
@@ -34,8 +34,8 @@
 .background button{
     cursor:pointer;
     padding:10px 24px;
-    background: #141414;
-    color: #fff;
+    background: white;
+    color: #629bc4;
     border:none;
 }
 
