--- a/client/src/components/Community/Post.css
+++ b/client/src/components/Community/Post.css
@@ -2,7 +2,7 @@
     background-color: white;
     margin: 20px;
     border-radius: 5px; 
-    border : 3px ;
+    border:3px solid #98bad3;
     display: flex;
     padding:7px;
 
