--- a/client/src/components/Community/PostDetail.css
+++ b/client/src/components/Community/PostDetail.css
@@ -1,10 +1,12 @@
 .postDetail {
     margin:auto;
-    margin-top: 10%;
+    margin-top: 2%;
     color:black;
-    width: 500px;
-    height: 650px;
-    background-color: aliceblue;
+    width: 40%;
+    height: 65%;
+    display:flex;
+    justify-content: flex-start;
+    background-color: white;
     display:flex;
     flex-direction: column;
     padding:15px;
@@ -12,23 +14,42 @@
 }
 
 .postDetail .commentTitle{
+    border-radius: 3px;
+    border:1px solid #629bc4;
     font-size: 20px;
     margin-bottom: 10px;
-    margin-top:20px;
+    margin-top:13px;
 }
-
+.postDetail div{
+    border-radius: 3px;
+}
 .postDetail .postInfo div{
+    border:1px solid #629bc4;
     font-size: 20px;
     margin-top: 10px;
 }
 
 .postDetail input{
-    border-style: none;
+    border:1px solid #629bc4;
+    border-radius: 3px;
     height: 20px;
     margin-bottom: 10px;
 }
 .postDetail button{
+    background-color: #98bad3;
+    color:white;
     border-style: none;
+    border-radius: 3px;
     cursor: pointer;
+    margin-right:3px;
     height: 23px;
+}
+.chat{
+    font-size: 20px;
+    color:#629bc4;
+    text-decoration: none;
+}
+.postDetail button a{
+    text-decoration: none;
+    color:white;
 }
