--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -2,7 +2,5 @@
     display: flex;
     width: 80%;
     margin:auto;
-    margin-top: 5%;
-    justify-content: center;
-    height:100%;
+    justify-content: center;;
 }
