--- a/client/src/components/Navigation/Navigation.css
+++ b/client/src/components/Navigation/Navigation.css
@@ -11,7 +11,9 @@
     text-decoration: none;
     padding:20px;
 }
-
+.navigation a:hover{
+    color: #629bc4;
+}
 .navigation span{
     font-size: 20px;
     font-weight: 500;
