--- a/client/src/components/Community/Post.css
+++ b/client/src/components/Community/Post.css
@@ -3,7 +3,7 @@
     padding-top: 100px;
     margin-top: 0px;
     border-radius: 5px; 
-    border : 3px ;
+    border:3px solid #98bad3;
     display: flex;
     padding:7px;
 }
