--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,9 +1,9 @@
 .chatPage{
-        width:50%;
+        width:45%;
         height:600px;
         justify-content: center;
         margin:auto;
-        margin-top: 5%;
+        margin-top: 3%;
 }
 .chatList{
         padding:20px;
@@ -15,6 +15,19 @@
         background-color: white;
         border-radius: 5px;
 }
+h4{
+        margin:0px;
+        font-size: 22px;
+}
+.chatRight2{
+        background-color:white;
+        display:flex;
+        color:black;
+        margin:2px;
+        padding:3px;
+        border-radius: 5px;
+        border: 1px solid #629bc4;
+}
 .chatRight{
         display:flex;
         justify-content: flex-end;
@@ -22,4 +35,12 @@
 .chatLeft{
         display:flex;
         justify-content: flex-start;
+}
+.chatLeft2{
+        background-color:white;
+        color:black;
+        margin:2px;
+        padding:3px;
+        border-radius: 5px;
+        border: 1px solid #629bc4;
 }
